force-app/main/default/objects/position__c/fields/C__c.field-meta.xml
<CustomField>
    <fullName>C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C#</label>
    <type>Checkbox</type>
</CustomField>