force-app/main/default/objects/position__c/fields/educational_requirements__c.field-meta.xml
<CustomField>
    <fullName>educational_requirements__c</fullName>
    <label>educational requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>