force-app/main/default/objects/position__c/fields/hire_by__c.field-meta.xml
<CustomField>
    <fullName>hire_by__c</fullName>
    <label>hire by</label>
    <type>Date</type>
</CustomField>