force-app/main/default/objects/position__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <label>location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>state__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>hyd</fullName>
            </value>
            <value>
                <fullName>bng</fullName>
            </value>
            <value>
                <fullName>chn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>