force-app/main/default/objects/position__c/fields/Max_pay__c.field-meta.xml
<CustomField>
    <fullName>Max_pay__c</fullName>
    <label>Max pay</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>