force-app/main/default/objects/position__c/fields/Min_pay__c.field-meta.xml
<CustomField>
    <fullName>Min_pay__c</fullName>
    <label>Min pay</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>