force-app/main/default/objects/position__c/fields/open_date__c.field-meta.xml
<CustomField>
    <fullName>open_date__c</fullName>
    <label>open date</label>
    <type>Date</type>
</CustomField>