force-app/main/default/objects/position__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>state</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ap</fullName>
            </value>
            <value>
                <fullName>karnataka</fullName>
            </value>
            <value>
                <fullName>tamilnadu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>